# LearnOpenGL

./: CMakeLists.txt  README.md  configure  start
extrenal/include/glad/: gl.h
extrenal/src/: gl.c
learn/1.GettingStarted/3.1Shaders/: shaders.cpp
learn/1.GettingStarted/3.2ShadersClass/: shaders.fs  shaders.vs  shaders_class.cpp
learn/1.GettingStarted/4.1Textures/: textures.cpp  textures.fs
learn/1.GettingStarted/4.2TextureFace/: texture_face.cpp  texture_face.vs
learn/1.GettingStarted/5.1Transformations/: texture_face.vs  transformations.cpp
learn/1.GettingStarted/5.1Transformations/变换/: 变换.html  变换.md
learn/1.GettingStarted/6.1CoordinateSystems/: coordinate_systems.cpp  texture_face.fs  texture_face.vs
learn/HelloTriangle/: hellotriangle.cpp
learn/Shaders/: shaders.cpp
learn/hellowindows/: hellowindos.cpp
shaders/: CMakeLists.txt
shaders/include/: shader.h
shaders/src/: shader.cpp
sharders/src/: sharder.cpp
